src/test/ui/const-generics/const_evaluatable_checked/feature-gate-const_evaluatable_checked.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/feature-gate-const_evaluatable_checked.rs:8:30
   |
LL | fn test<const N: usize>() -> Arr<N> where Arr<N>: Default {
   |                              ^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

